--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "node src/index.js",
     "start": "node src/index.js"
   },
   "dependencies": {
